--- a/Replication/IR_notebook.ipynb
+++ b/Replication/IR_notebook.ipynb
@@ -34,10 +34,8 @@
         "from docx import *\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "from google.colab import drive\n",
         "\n",
-        "drive.mount('/content/gdrive/')\n",
-        "path='/content/gdrive/My Drive/QA/'"
+        "path='./'"
       ]
     },
     {
